@@ -18,6 +18,8 @@ In particular, this release provides:
 Bug fixes
 ---------
 
+* [`2184 <https://cta-redmine.irap.omp.eu/issues/2184>`_] -
+  Correct output of COMPTEL DRB fitting XML model
 * [`2177 <https://cta-redmine.irap.omp.eu/issues/2177>`_] -
   Fix UTC rounding error in ``GTime::utc()`` method
 
