@@ -1,6 +1,6 @@
 New Features and Important Changes in GammaLib 1.5.0
 
-6 September 2017
+7 September 2017
 
 
 1. Introduction
@@ -189,3 +189,6 @@ finally the class GCOMDri now handles all COMPTEL data cubes (#2187).
 
 The class GCOMStatus was added to handle a mission wide database of D1 and D2
 module status that forms now part of the COMPTEL calibration database (#2187).
+
+The COMPTEL Phibar fitting background model now writes out a format that can be
+used again (#2184).
